# rust-eth2crawler

./: .env  .gitmodules  Cargo.toml  README.md
sql/: setup.sql
src/: main.rs
